--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,11 @@
+# app
+SERVER_PORT = 7000
+
+# route
+ROUTE_PATH = /src/api
+CMS_API_PREFIX = /common-cms
+WEB_API_PREFIX = /common-api
+
 # webtoken
 SECRETKEY = xasnuwqma
 SECRET_EXPIRESE_IN = 7200
