--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "jsonwebtoken": "^8.5.1",
     "koa": "^2.13.4",
     "koa-bodyparser": "^4.3.0",
-    "koa-router": "^10.1.1"
+    "koa-router": "^10.1.1",
+    "require-directory": "^2.1.1"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
