处理正常响应的统一格式化处理

--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ SERVER_PORT = 7000
 # route
 ROUTE_PATH = /src/api
 CMS_API_PREFIX = /cms
-WEB_API_PREFIX = /cms
+WEB_API_PREFIX = /web
 
 # webtoken
 SECRETKEY = xasnuwqma
