编写token检验中间件

--- a/.env
+++ b/.env
@@ -8,7 +8,8 @@ WEB_API_PREFIX = /web
 
 # webtoken
 SECRETKEY = xasnuwqma
-SECRET_EXPIRESE_IN = 36000
+SECRET_ACCESS_TOKEN_EXPIRESE_IN = 604800
+SECRET_REFRESH_TOKEN_EXPIRESE_IN = 1209600
 
 # crypto
 AESKEY32 = 12157235415320451215723541532045
