--- a/.env.production
+++ b/.env.production
@@ -8,7 +8,8 @@ WEB_API_PREFIX = /common-api
 
 # webtoken
 SECRETKEY = xasnuwqma
-SECRET_EXPIRESE_IN = 7200
+SECRET_ACCESS_TOKEN_EXPIRESE_IN = 7200
+SECRET_REFRESH_TOKEN_EXPIRESE_IN = 604800
 
 # crypto
 AESKEY32 = 12157235415320451215723541532045
