模拟实际的用户信息接口返回带有用户可访问menu菜单数据

--- a/.env
+++ b/.env
@@ -8,7 +8,9 @@ WEB_API_PREFIX = /web
 
 # webtoken
 SECRETKEY = xasnuwqma
+# aceess_token过期时间单位: m
 SECRET_ACCESS_TOKEN_EXPIRESE_IN = 14400
+# refresh_token过期时间单位: m
 SECRET_REFRESH_TOKEN_EXPIRESE_IN = 1209600
 
 # crypto
