--- a/.env.production
+++ b/.env.production
@@ -8,7 +8,9 @@ WEB_API_PREFIX = /common-api
 
 # webtoken
 SECRETKEY = xasnuwqma
+# aceess_token过期时间单位: m
 SECRET_ACCESS_TOKEN_EXPIRESE_IN = 7200
+# refresh_token过期时间单位: m
 SECRET_REFRESH_TOKEN_EXPIRESE_IN = 604800
 
 # crypto
